implementacion de eliminar carrito y actualizacion del catalogo de productos